# web-image-processing

./: Cargo.toml  README.md  build.sh  index.html
docs/: 404.html  index.html  rust-yew-test-e15137e1f84e5d51.js  rust-yew-test-e15137e1f84e5d51_bg.wasm  web-image-processing-1331f0b6cefce90a.js  web-image-processing-1331f0b6cefce90a_bg.wasm  web-image-processing-52d824e74c6f3458.js  web-image-processing-52d824e74c6f3458_bg.wasm  web-image-processing-98a0853d2e3cb87c.js  web-image-processing-98a0853d2e3cb87c_bg.wasm  web-image-processing-ae5be0a081784906.js  web-image-processing-ae5be0a081784906_bg.wasm  web-image-processing-bfdb306963380aa9.js  web-image-processing-bfdb306963380aa9_bg.wasm  web-image-processing-c4573f0d5c8ecb4c.js  web-image-processing-c4573f0d5c8ecb4c_bg.wasm  web-image-processing-e6e6615f68d463fa.js  web-image-processing-e6e6615f68d463fa_bg.wasm  web-image-processing-f2a32d3f8deb9549.js  web-image-processing-f2a32d3f8deb9549_bg.wasm
src/: camera_demo.rs  clickable_demo.rs  long_demo.rs  main.rs  navigation_bar.rs  routes_demo.rs
src/pages/: camera_demo.rs  mod.rs  routes_demo.rs
